Fixing unused warnings of API analysis  and VCAOT